Add processing for permissions
